--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -10,6 +10,14 @@
   }
 }
 
+.navbar-nav .nav-link.active{
+  color: var(--secondory-text);
+}
+
+.nav-link {
+  color: var(--primary-text);
+}
+
 .navbar .navbar-nav .nav-item {
   position: relative;
 }
@@ -20,7 +28,7 @@
   right: 0;
   margin: 0 auto;
   content: "";
-  background-color: black;
+  background-color: var(--secondory-color);
   width: 0%;
   height: 4px;
   transition: all 0.5s;
@@ -41,7 +49,7 @@
 }
 
 .nav-content-padding{
-    padding: 0 81px 0 0;
+    padding: 0 50px 0 0;
 }
 .nav-content-text{
     padding: 0 2% 0 0;
