--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 992px) {
   .navbar {
     padding: 0;
+    z-index: 0;
   }
   .navbar .navbar-nav .nav-link {
     padding: 1em 0;
@@ -32,6 +33,7 @@
   width: 0%;
   height: 4px;
   transition: all 0.5s;
+  z-index: 0;
 }
 .navbar .navbar-nav .nav-item:hover::after {
   width: 100%;
@@ -42,10 +44,12 @@
 .nav-bar-bg{
   background: url(../images/navigation-bar-img.png) repeat;
   opacity: 1;
+  
 }
 
 .nav-bar-margin{
   margin: 0 77px;
+  
 }
 
 .nav-content-padding{
